refactor: Fix code smells